@@ -1,3 +1,9 @@
+2015-04-10  Tobias Burnus  <burnus@net-b.de>
+
+	* gfortran.dg/coarray_lock_6.f90: New.
+	* gfortran.dg/coarray_lock_7.f90: New.
+	* gfortran.dg/coarray/lock_2.f90: New.
+
 2015-04-10  Mikael Morin  <mikael@gcc.gnu.org>
 
 	PR fortran/56674
